Fixed overflow in home screen
vertical-alignment with 95% width (forced)

--- a/css/app.css
+++ b/css/app.css
@@ -211,7 +211,8 @@ li {
 
 .vertical-center {
   margin: 0;
-  position: inherit;
+  position: absolute;
+  width:95%;
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
